--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                           <div class="row">
                               <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                                   <div class="page-title  home text-center">
-                                    <span class="heading-page"> Homepage VPS Sohib
+                                    <span class="heading-page"> Homepage VPS Sohib2
                                     </span>
                                       <p class="mt20">Page contenant les redirections possibles</p>
                                   </div>
