--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                                                     <i class="fab fa-jenkins"></i>
                                                   </span>
                                                   <span class="title">Jenkins</span>
+                                                  <p id="status1" class="status">En cours de chargement...</p>
                                               </span>
                                               <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
                                           </a>
@@ -197,6 +198,30 @@
         document.getElementById("invoicegenbtn").onclick = function () {
             window.open("http://137.74.194.167/invoice", '_blank').focus();
         };
+
+        function checkServiceStatus(url, elementId) {
+            fetch("https://sohibtabiche.com/redirect.php?url=" + url)
+                .then(response => {
+                if (response.ok) {
+                    document.getElementById(elementId).textContent = 'Statut : ON';
+                    document.getElementById(elementId).classList.remove('off');
+                    document.getElementById(elementId).classList.add('on');
+                } else {
+                    document.getElementById(elementId).textContent = 'Statut : OFF';
+                    document.getElementById(elementId).classList.remove('on');
+                    document.getElementById(elementId).classList.add('off');
+                }
+                })
+                .catch(error => {
+                console.error('Erreur lors de la récupération du statut du service :', error);
+                document.getElementById(elementId).textContent = 'Statut : OFF (Erreur)';
+                document.getElementById(elementId).classList.remove('on');
+                document.getElementById(elementId).classList.add('off');
+                });
+        }
+
+        // Vérification du statut des services
+        checkServiceStatus('https://sohibtabiche.com/', 'status1');
 
 
         
