--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                                     <i class="far fa-user-circle"></i>
                                                   </span>
                                                   <span class="title">Personnal Website</span>
-                                                  <p id="sohibwebsiteStatus" class="status">En cours de chargement...</p>
+                                                  <p id="sohibwebsiteStatus" class="status"></p>
                                               </span>
                                               <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
                                           </a>
@@ -65,7 +65,7 @@
                                                     <i class="far fa-folder-open"></i>
                                                   </span>
                                                   <span class="title">File Manager</span>
-                                                  <p id="fileStatus" class="status">En cours de chargement...</p>
+                                                  <p id="fileStatus" class="status"></p>
                                               </span>
                                               <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
                                           </a>
@@ -87,7 +87,7 @@
                                                     <i class="fab fa-github"></i>
                                                   </span>
                                                   <span class="title">Github</span>
-                                                  <p id="githubStatus" class="status">En cours de chargement...</p>
+                                                  <p id="githubStatus" class="status"></p>
                                               </span>
                                               <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
                                           </a>    
@@ -109,7 +109,7 @@
                                                     <i class="fab fa-jenkins"></i>
                                                   </span>
                                                   <span class="title">Jenkins</span>
-                                                  <p id="jenkinsStatus" class="status">En cours de chargement...</p>
+                                                  <p id="jenkinsStatus" class="status"></p>
                                               </span>
                                               <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
                                           </a>
@@ -152,7 +152,7 @@
                                                       <i class="fa fa-clipboard"></i>
                                                   </span>
                                                   <span class="title">Invoice generator</span>
-                                                  <p id="invoicegenStatus" class="status">En cours de chargement...</p>
+                                                  <p id="invoicegenStatus" class="status"></p>
                                               </span>
                                               <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
                                           </a>
@@ -211,7 +211,7 @@
                     document.getElementById(elementId).classList.remove('off');
                     document.getElementById(elementId).classList.add('on');
                 } else {
-                    document.getElementById(elementId).textContent = 'OFF';
+                    document.getElementById(elementId).textContent = '';
                     document.getElementById(elementId).classList.remove('on');
                     document.getElementById(elementId).classList.add('off');
                 }
